Add nDPI library module

--- a/nDPI/CMakeLists.txt
+++ b/nDPI/CMakeLists.txt
@@ -9,8 +9,9 @@ add_definitions(-DNDPI_LIB_COMPILATION)
 
 include_directories(./src/include ./src/lib/third_party/include)
 
-AUX_SOURCE_DIRECTORY(./src/lib AllSources)
+AUX_SOURCE_DIRECTORY(./src/lib/third_party/src AllSources)
 AUX_SOURCE_DIRECTORY(./src/lib/protocols AllSources)
+AUX_SOURCE_DIRECTORY(./src/lib AllSources)
 
 # libndpi.so target
 ADD_LIBRARY(ndpi SHARED ${AllSources})
