--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,5 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation project(path: ':zdtun')
     implementation 'cat.ereza:customactivityoncrash:2.2.0'
+    implementation project(path: ':ndpi')
 }
