--- a/app/src/main/jni/vpnproxy-jni/CMakeLists.txt
+++ b/app/src/main/jni/vpnproxy-jni/CMakeLists.txt
@@ -8,7 +8,8 @@ add_library(vpnproxy-jni
              pcap)
 
 include_directories(../../../..)
-include_directories(../../../../../../../src/zdtun)
+include_directories(../../../../../../zdtun)
+include_directories(../../../../../../nDPI/src/include)
 
 find_library( log-lib
               log)
@@ -24,6 +25,13 @@ if (NOT zdtun-lib)
     message(FATAL_ERROR "zdtun not found!")
 endif()
 
+set(ndpi-lib ${CMAKE_CURRENT_SOURCE_DIR}/../../../../../ndpi/build/intermediates/library_and_local_jars_jni/debug/${ANDROID_ABI}/libndpi.so)
+
+if (NOT ndpi-lib)
+    message(FATAL_ERROR "nDPI not found!")
+endif()
+
 target_link_libraries( vpnproxy-jni
         ${zdtun-lib}
+        ${ndpi-lib}
         ${log-lib})
