Implement embedded HTTP server to provide an easy PCAP download option
It's now possible to choose the PCAP dump mode: none (no external PCAP dump), HTTP server, UDP exporter.
The HTTP server mode is a convenient way to download a PCAP without any client side configuration.
This also makes it possible to capture the PCAP data on a Windows pc, where the UDP collection mode is
not normally applicable.

Closes #13

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,5 @@ dependencies {
     implementation project(path: ':zdtun')
     implementation 'cat.ereza:customactivityoncrash:2.2.0'
     implementation project(path: ':ndpi')
+    implementation 'org.nanohttpd:nanohttpd:2.3.1'
 }
