--- a/ndpi/build.gradle
+++ b/ndpi/build.gradle
@@ -1,8 +1,8 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 29
-    buildToolsVersion "29.0.0"
+    compileSdkVersion 30
+    buildToolsVersion "29.0.2"
 
 
     defaultConfig {
@@ -23,7 +23,7 @@ android {
     }
     externalNativeBuild {
         cmake {
-            path file('../../nDPI/CMakeLists.txt')
+            path file('src/main/CMakeLists.txt')
         }
     }
 
