--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ android {
         applicationId "com.emanuelef.remote_capture"
         minSdkVersion 19
         targetSdkVersion 30
-        versionCode 12
-        versionName "1.2.9"
+        versionCode 13
+        versionName "1.2.10"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
@@ -23,7 +23,8 @@ android {
         }
     }
     packagingOptions {
-        doNotStrip '**.so'
+        // NOTE: unstripped nDPI library takes up about 4 MB!
+        //doNotStrip '**.so'
     }
 }
 
