--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,26 +2,36 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 30
-    buildToolsVersion "29.0.3"
+    buildToolsVersion "30.0.3"
+    ndkVersion "22.0.7026061"
+
     defaultConfig {
         applicationId "com.emanuelef.remote_capture"
         minSdkVersion 21
         targetSdkVersion 30
         versionCode 15
         versionName "1.2.12"
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
+
     buildTypes {
         release {
             minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
     externalNativeBuild {
         cmake {
             path file('src/main/jni/vpnproxy-jni/CMakeLists.txt')
         }
     }
+
+    compileOptions {
+        encoding "UTF-8"
+        sourceCompatibility JavaVersion.VERSION_1_8
+        targetCompatibility JavaVersion.VERSION_1_8
+    }
+
     packagingOptions {
         // NOTE: unstripped nDPI library takes up about 4 MB!
         //doNotStrip '**.so'
@@ -29,15 +39,14 @@ android {
 }
 
 dependencies {
+// AndroidX
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'androidx.preference:preference:1.1.1'
-    implementation 'androidx.viewpager:viewpager:1.0.0'
     implementation 'androidx.localbroadcastmanager:localbroadcastmanager:1.0.0'
+    implementation 'androidx.preference:preference:1.1.1'
     implementation 'com.google.android.material:material:1.2.1'
+
+// Third-party
     implementation 'cat.ereza:customactivityoncrash:2.2.0'
     implementation 'org.nanohttpd:nanohttpd:2.3.1'
-    androidTestImplementation 'androidx.test:runner:1.3.0'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    testImplementation 'junit:junit:4.12'
 }
