--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,15 +27,15 @@
         </activity>
 
         <activity
-            android:name=".activities.MonitoringActivity"
-            android:label="@string/monitoring"
+            android:name=".activities.InspectorActivity"
+            android:label="@string/inspector"
             android:launchMode="singleTop"
             android:parentActivityName=".activities.MainActivity" />
         <activity
             android:name=".activities.ConnectionDetailsActivity"
             android:label="@string/connection_details"
             android:launchMode="singleTop"
-            android:parentActivityName=".activities.MonitoringActivity"/>
+            android:parentActivityName=".activities.InspectorActivity"/>
         <activity
             android:name=".activities.StatsActivity"
             android:label="@string/stats"
