--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,14 +29,14 @@
         </activity>
 
         <activity
-            android:name=".activities.InspectorActivity"
-            android:label="@string/inspector"
+            android:name=".activities.AppsActivity"
+            android:label="@string/apps"
             android:launchMode="singleTop"
             android:parentActivityName=".activities.MainActivity" />
         <activity
             android:name=".activities.ConnectionDetailsActivity"
             android:label="@string/connection_details"
-            android:parentActivityName=".activities.InspectorActivity"/>
+            android:parentActivityName=".activities.MainActivity"/>
         <activity
             android:name=".activities.StatsActivity"
             android:label="@string/stats"
