Rework uid_resolver.c
Closes #1

--- a/app/src/main/jni/vpnproxy-jni/CMakeLists.txt
+++ b/app/src/main/jni/vpnproxy-jni/CMakeLists.txt
@@ -10,6 +10,7 @@ include_directories(../../../..)
 add_library(vpnproxy-jni SHARED
         vpnproxy.c
         uid_resolver.c
+        jni_helpers.c
         pcap)
 
 # nDPI
