Implement DNS reply host caching
The cache is used to resolve an IP into an host name when no other
host information is available.

--- a/app/src/main/jni/vpnproxy-jni/CMakeLists.txt
+++ b/app/src/main/jni/vpnproxy-jni/CMakeLists.txt
@@ -11,6 +11,7 @@ add_library(vpnproxy-jni SHARED
         vpnproxy.c
         uid_resolver.c
         jni_helpers.c
+        ip_lru.c
         pcap)
 
 # nDPI
