--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,4 +52,6 @@ dependencies {
 // Third-party
     implementation 'cat.ereza:customactivityoncrash:2.3.0'
     implementation 'org.nanohttpd:nanohttpd:2.3.1'
+
+    implementation 'com.google.android.gms:play-services-ads:20.1.0'
 }
