--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,7 +47,10 @@ dependencies {
     implementation 'androidx.localbroadcastmanager:localbroadcastmanager:1.0.0'
     implementation 'androidx.preference:preference:1.1.1'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
+
+// Google
     implementation 'com.google.android.material:material:1.3.0'
+    implementation 'com.google.code.gson:gson:2.8.6'
 
 // Third-party
     implementation 'cat.ereza:customactivityoncrash:2.3.0'
