--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,14 +40,15 @@
         </activity>
 
         <activity
+            android:name=".activities.ConnectionDetailsActivity" />
+        <activity
+            android:name=".activities.AppDetailsActivity" />
+        <activity
+            android:name=".activities.ConnectionsActivity" />
+        <activity
             android:name=".activities.AppsActivity"
             android:launchMode="singleTop"
             android:parentActivityName=".activities.MainActivity" />
-        <activity
-            android:name=".activities.ConnectionDetailsActivity"
-            android:parentActivityName=".activities.MainActivity"/>
-        <activity
-            android:name=".activities.AppDetailsActivity" />
         <activity
             android:name=".activities.StatsActivity"
             android:launchMode="singleTop"
