Initial export of app info in PCAP
Initial work for #36

--- a/app/src/main/jni/vpnproxy-jni/CMakeLists.txt
+++ b/app/src/main/jni/vpnproxy-jni/CMakeLists.txt
@@ -6,6 +6,7 @@ add_library(vpnproxy-jni SHARED
         capture_root.c
         ip_lru.c
         ndpi_master_protos.c
+        crc32.c
         pcap_utils.c)
 
 # nDPI
