--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,8 @@ android {
 }
 
 dependencies {
+    def billing_version = "4.0.0"
+
 // AndroidX
     implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
@@ -57,4 +59,5 @@ dependencies {
     implementation 'org.nanohttpd:nanohttpd:2.3.1'
 
     implementation 'com.google.android.gms:play-services-ads:20.2.0'
+    implementation "com.android.billingclient:billing:$billing_version"
 }
