Implement start via intent
User permission is asked every time the intent is fired. Stopping capure
is allowed to the same app which started it without asking permission.

See #33

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,12 @@
         </activity>
 
         <activity
+            android:name=".activities.CaptureCtrl"
+            android:theme="@style/AppTheme.Floating"
+            android:launchMode="singleTop"
+            android:exported="true" />
+
+        <activity
             android:name=".activities.ConnectionDetailsActivity" />
         <activity
             android:name=".activities.AppDetailsActivity" />
