--- a/.github/workflows/debug-build.yml
+++ b/.github/workflows/debug-build.yml
@@ -12,7 +12,7 @@ jobs:
     - uses: actions/setup-java@v1
       with:
         java-version: 1.8
-    - run: ./gradlew assembleDebug
+    - run: ./gradlew assembleDebug -PdoNotStrip
     - uses: actions/upload-artifact@v2
       with:
         name: PCAPdroid build ${{github.sha}}
