Fix java version

--- a/.github/workflows/debug-build.yml
+++ b/.github/workflows/debug-build.yml
@@ -11,7 +11,7 @@ jobs:
         submodules: 'recursive'
     - uses: actions/setup-java@v1
       with:
-        java-version: 1.8
+        java-version: '11'
     - run: ./gradlew assembleDebug -PdoNotStrip
     - uses: actions/upload-artifact@v2
       with:
