--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
     <uses-feature android:name="android.hardware.touchscreen" android:required="false" />
 
     <application
-        android:name=".MyApplication"
+        android:name=".PCAPdroid"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/pcapdroid_app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -73,7 +73,7 @@
             android:launchMode="singleTop"
             android:parentActivityName=".activities.MainActivity" />
         <activity
-            android:name=".activities.WhitelistActivity"
+            android:name=".activities.MaskEditActivity"
             android:launchMode="singleTop"
             android:parentActivityName=".activities.MainActivity" />
 
