Implement "Edit Filter" activity
- Ability to filter connections by status
- Fix search button sometimes disappearing

Fixes #126

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -76,6 +76,9 @@
             android:name=".activities.MaskEditActivity"
             android:launchMode="singleTop"
             android:parentActivityName=".activities.MainActivity" />
+        <activity
+            android:name=".activities.FilterActivity"
+            android:launchMode="singleTop" />
 
         <service
             android:name=".CaptureService"
