--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,5 +66,14 @@ dependencies {
     implementation 'org.nanohttpd:nanohttpd:2.3.1'
 
     implementation 'com.google.android.gms:play-services-ads:20.4.0'
+    constraints {
+        implementation('androidx.work:work-runtime:2.7.0') {
+            // fixes crash in Android 11
+            // https://github.com/OneSignal/react-native-onesignal/issues/1310
+            // https://groups.google.com/g/google-admob-ads-sdk/c/uCQkZcqOVtE
+            because 'previous versions have a bug impacting this application'
+        }
+    }
+
     implementation "com.android.billingclient:billing:$billing_version"
 }
