Add button to send crash report via email
Closes #154

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,6 +50,8 @@
             android:parentActivityName=".activities.SettingsActivity" />
 
         <activity
+            android:name=".activities.ErrorActivity" />
+        <activity
             android:name=".activities.ConnectionDetailsActivity" />
         <activity
             android:name=".activities.AppDetailsActivity" />
