--- a/.github/workflows/debug-build.yml
+++ b/.github/workflows/debug-build.yml
@@ -12,6 +12,7 @@ jobs:
     - uses: actions/setup-java@v1
       with:
         java-version: '11'
+    - run: ./gradlew test
     - run: ./gradlew assembleDebug -PdoNotStrip
     - uses: actions/upload-artifact@v2
       with:
