Decouple JNI from native code
It's now possible to build the native code without the Android
dependencies. This opens up new possibilities for debugging and testing.

--- a/app/src/main/jni/CMakeLists.txt
+++ b/app/src/main/jni/CMakeLists.txt
@@ -6,7 +6,7 @@ set(ROOTDIR ${CMAKE_CURRENT_SOURCE_DIR}/../../../..)
 
 # Add debug symbols
 # See packagingOptions.doNotStrip in build.gradle to avoid stripping
-SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g")
+SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -fPIC")
 
 # zdtun
 set(ZDTUN_ROOT ${ROOTDIR}/submodules/zdtun)
