--- a/app/src/main/jni/core/CMakeLists.txt
+++ b/app/src/main/jni/core/CMakeLists.txt
@@ -8,7 +8,8 @@ add_library(capture SHARED
         ndpi_master_protos.c
         crc32.c
         blacklist.c
-        pcap_utils.c)
+        pcap_utils.c
+        jni_impl.c)
 
 # nDPI
 set(NDPI_ROOT ${ROOTDIR}/submodules/nDPI)
@@ -25,7 +26,12 @@ configure_file(${NDPI_GEN}/ndpi_define.h ${NDPI_ROOT}/src/include/ndpi_define.h)
 
 ADD_LIBRARY(ndpi SHARED ${ndpiSources} ${NDPI_ROOT}/src/include/ndpi_api.h)
 
-find_library(log-lib log)
+
+if(ANDROID)
+        find_library(log-lib log)
+else()
+        set(log-lib "")
+endif()
 
 target_link_libraries(capture
         zdtun
