--- a/app/src/main/jni/common/CMakeLists.txt
+++ b/app/src/main/jni/common/CMakeLists.txt
@@ -1,3 +1,3 @@
 project(common C)
 
-ADD_LIBRARY(common STATIC uid_lru.c utils.c uid_resolver.c)
+ADD_LIBRARY(common STATIC uid_lru.c utils.c jni_utils.c uid_resolver.c)
