--- a/.github/workflows/native-tests.yml
+++ b/.github/workflows/native-tests.yml
@@ -9,4 +9,6 @@ jobs:
     - uses: actions/checkout@v2
       with:
         submodules: 'recursive'
-    - run: ./app/src/main/jni/tests/run_tests.sh
+    - name: Run native tests
+      working-directory: ./app/src/main/jni/tests
+      run: ./run_tests.sh
