Compile native tests with AddressSanitizer
This makes tests fail if memory errors or leaks are detected

--- a/.github/workflows/native-tests.yml
+++ b/.github/workflows/native-tests.yml
@@ -3,12 +3,13 @@ name: Test native code
 on: [push, pull_request]
 
 jobs:
-  build:
+  test:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
       with:
         submodules: 'recursive'
+    - uses: KyleMayes/install-llvm-action@v1
     - name: Run native tests
       working-directory: ./app/src/main/jni/tests
       run: ./run_tests.sh
